# executor5-bulk

./: .gitignore  README.md  _diary.txt  _draft.txt  _notes.txt
incubator/orxvirt/: Makefile.am  configure.ac  orxvirt.cls
incubator/orxvirt/src/: Makefile.am  orxconnx.cpp  orxdomain.cpp  orxvirt.cpp  orxvirt.h
incubator/orxvirt/test/: test01.rex  test02.rex
interpreter/trunk/: CHANGES  COPYING  DeveloperNotes.txt  INSTALL  Makefile.am  Makefile.win  Nmake.inc  README  acinclude.m4  configure.ac  oorexx.spec  oorexx.spec.in  oorexx.ver  xsl.sh.in
interpreter/trunk/api/: InternalAPI.hpp  Makefile.am  oorexxapi.h  rexxapidefs.h
interpreter/trunk/extensions/: Makefile.am
interpreter/trunk/extensions/platform/: Makefile.am
interpreter/trunk/extensions/rxmath/: Makefile.am  Makefile.win  rxmath.mak
interpreter/trunk/extensions/rxregexp/: Makefile.am  Makefile.win  automaton.hpp  dblqueue.hpp  rxregexp.def  rxregexp.mak  rxregexp.orx
interpreter/trunk/extensions/rxsock/: Makefile.am  Makefile.win  rxsock.cpp
interpreter/trunk/kernel/: Makefile.am  Makefile.win  Rxstring.hpp  SysUtil.cpp  SysUtil.hpp  kernel.mak
interpreter/trunk/kernel/RexxClasses/: CoreClasses.orx  StreamClasses.orx  SystemObjects.orx
interpreter/trunk/kernel/api/: LocalAPIManager.hpp  RexxLegacyAPI.cpp  ThreadContextStubs.cpp
interpreter/trunk/kernel/classes/: ASCIIDBCSStrings.cpp  ArrayClass.cpp  ArrayClass.hpp  ClassClass.cpp  ClassClass.hpp  DirectoryClass.cpp  DirectoryClass.hpp  IntegerClass.cpp  IntegerClass.hpp  ListClass.cpp  ListClass.hpp  MessageClass.cpp  MessageClass.hpp  MethodClass.cpp  MutableBufferClass.cpp  MutableBufferClass.hpp  NumberStringClass.cpp  NumberStringClass.hpp  NumberStringMath.cpp  ObjectClass.cpp  ObjectClass.hpp  QueueClass.cpp  QueueClass.hpp  RelationClass.cpp  StackClass.cpp  StackClass.hpp  StemClass.cpp  StemClass.hpp  StringClass.cpp  StringClass.hpp  StringClassBit.cpp  StringClassConversion.cpp  StringClassMisc.cpp  StringClassSub.cpp  StringClassWord.cpp  TableClass.hpp
interpreter/trunk/kernel/client/: LocalMacroSpaceManager.cpp  LocalQueueManager.hpp
interpreter/trunk/kernel/expression/: BuiltinFunctions.cpp  CommonSysUtils.cpp  ExpressionBaseVariable.hpp  ExpressionDotVariable.cpp  ExpressionDotVariable.hpp  ExpressionLogical.cpp  ExpressionMessage.cpp  ExpressionOperator.cpp  ExpressionStem.cpp  ExpressionStem.hpp  ExpressionVariable.cpp  ExpressionVariable.hpp  QueueFunctions.cpp
interpreter/trunk/kernel/extras/: rexxcps.rex  rexxtry.rex
interpreter/trunk/kernel/instructions/: AddressInstruction.cpp  AddressInstruction.hpp  AssignmentInstruction.cpp  AssignmentInstruction.hpp  CallInstruction.cpp  CallInstruction.hpp  DoBlock.hpp  DoInstruction.cpp  DoInstruction.hpp  DropInstruction.cpp  ElseInstruction.hpp  EndIf.cpp  EndInstruction.cpp  EndInstruction.hpp  ExitInstruction.cpp  ExposeInstruction.hpp  ForwardInstruction.hpp  GuardInstruction.cpp  IfInstruction.hpp  InterpretInstruction.hpp  MessageInstruction.cpp  MessageInstruction.hpp  NopInstruction.hpp  NumericInstruction.cpp  OptionsInstruction.cpp  ParseInstruction.cpp  ParseTarget.cpp  ParseTarget.hpp  ParseTrigger.cpp  ParseTrigger.hpp  ProcedureInstruction.hpp  QueueInstruction.cpp  RaiseInstruction.hpp  ReplyInstruction.cpp  ReplyInstruction.hpp  RexxInstruction.hpp  SayInstruction.cpp  SayInstruction.hpp  SelectInstruction.cpp  SelectInstruction.hpp  (+2 more)
interpreter/trunk/kernel/messages/: Makefile.am  RexxErrorCodes.xsl  RexxMessageNumbers.h  RexxMessageNumbers.tpl  RexxMessageTable.tpl  rexxmsg.xml
interpreter/trunk/kernel/parser/: InstructionParser.cpp  Scanner.cpp  SourceFile.cpp  SourceFile.hpp  Token.cpp  Token.hpp
interpreter/trunk/kernel/platform/: Makefile.am
interpreter/trunk/kernel/runtime/: ActivationApiContexts.hpp  ArgumentUtilities.hpp  ClassTypeCodes.h  DeadObject.hpp  ExitHandler.cpp  FunctionActivator.hpp  GlobalData.cpp  GlobalNames.h  InternalPackage.cpp  Interpreter.cpp  Interpreter.hpp  InterpreterInstance.hpp  MemorySegment.hpp  NativeMethods.h  PrimitiveClasses.xml  RexxActivation.cpp  RexxActivation.hpp  RexxActivationStack.hpp  RexxActivity.cpp  RexxActivity.hpp  RexxBehaviour.cpp  RexxBehaviour.hpp  RexxBuffer.cpp  RexxBuffer.hpp  RexxCollection.cpp  RexxCollection.hpp  RexxCompoundTable.cpp  RexxCompoundTable.hpp  RexxCompoundTail.cpp  RexxConstants.cpp  RexxConstants.hpp  RexxHashTable.cpp  RexxHashTable.hpp  RexxLocalVariables.cpp  RexxMemory.cpp  RexxMemory.hpp  RexxNativeActivation.hpp  RexxVariable.cpp  RexxVariableDictionary.cpp  RexxVariableDictionary.hpp  (+4 more)
interpreter/trunk/kernel/script/: ScriptContext.cpp  ScriptContext.hpp
interpreter/trunk/kernel/streamLibrary/: StreamNative.cpp  StreamNative.hpp
interpreter/trunk/rexxapi/: Makefile.am  Makefile.win
interpreter/trunk/rexxapi/api/: MacroSpaceApi.cpp
interpreter/trunk/rexxapi/daemon/: APIServerInstance.cpp
interpreter/trunk/rexxapi/platform/: Makefile.am
interpreter/trunk/samples/: complex.rex  guess.rex  makestring.rex  philfork.rex  usepipe.rex
interpreter/trunk/shared/: Makefile.am  SystemException.hpp
interpreter/trunk/utilities/: Makefile.am
interpreter/trunk/utilities/platform/: Makefile.am
interpreter/trunk/utilities/rexx/: Makefile.am  Makefile.win
interpreter/trunk/utilities/rexxc/: Makefile.am  Makefile.win
interpreter/trunk/utilities/rexxhide/: Makefile.am  Makefile.win
interpreter/trunk/utilities/rexximg/: Makefile.am  Makefile.win  rexximg.cpp
interpreter/trunk/utilities/rxapi/: APIServer.hpp  Makefile.am  Makefile.win
interpreter/trunk/utilities/rxqueue/: Makefile.am  Makefile.win
interpreter/trunk/utilities/rxsubcom/: Makefile.am  Makefile.win
oorexx/trunk/rexxapi/: Makefile.am  ServiceException.hpp  ServiceMessage.cpp  ServiceMessage.hpp
oorexx/trunk/rexxapi/api/: ClientMessage.cpp  ClientMessage.hpp  LocalAPIContext.cpp  LocalAPIManager.cpp  LocalAPISubsystem.hpp  LocalMacroSpaceManager.hpp  (+6 more)
rexxgtk/trunk/GTKv2/: CMakeLists.txt  Readme.txt  oorexxgtk2.cls
sandbox/erich/mpz/: CMakeLists.txt  mpz.cpp  mpz.def  mpz.hpp  mpzlib.rex
(+11705 files in other folders)
